minor bib updates

--- a/docs/yellowpaper/references.bib
+++ b/docs/yellowpaper/references.bib
@@ -10,13 +10,12 @@
   pages     = {113--120},
   publisher = {Springer},
   year      = {1996},
-  url       = {https://doi.org/10.1007/3-540-60865-6\_48},
+  note      = {\url{https://doi.org/10.1007/3-540-60865-6\_48}},
   doi       = {10.1007/3-540-60865-6\_48},
   timestamp = {Tue, 14 May 2019 10:00:54 +0200},
   biburl    = {https://dblp.org/rec/conf/fse/AndersonB96a.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
 @inproceedings{sphinxpaper,
   author    = {George Danezis and
                Ian Goldberg},
@@ -26,14 +25,12 @@
   pages     = {269--282},
   publisher = {{IEEE} Computer Society},
   year      = {2009},
-  url       = {https://doi.org/10.1109/SP.2009.15},
+  note      = {\url{https://doi.org/10.1109/SP.2009.15}},
   doi       = {10.1109/SP.2009.15},
   timestamp = {Wed, 16 Oct 2019 14:14:51 +0200},
   biburl    = {https://dblp.org/rec/conf/sp/DanezisG09.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
-
 @inproceedings{mixnets,
   author    = {David Chaum},
   title     = {Untraceable Electronic Mail, Return Addresses, and Digital Pseudonyms},
@@ -42,13 +39,12 @@
   number    = {2},
   pages     = {84--88},
   year      = {1981},
-  url       = {http://doi.acm.org/10.1145/358549.358563},
+  note      = {\url{http://doi.acm.org/10.1145/358549.358563}},
   doi       = {10.1145/358549.358563},
   timestamp = {Wed, 14 Nov 2018 10:22:32 +0100},
   biburl    = {https://dblp.org/rec/journals/cacm/Chaum81.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
-
 @inproceedings{loopix,
   author    = {Ania M. Piotrowska and
                Jamie Hayes and
@@ -59,7 +55,7 @@
   journal   = {CoRR},
   volume    = {abs/1703.00536},
   year      = {2017},
-  url       = {http://arxiv.org/abs/1703.00536},
+  note      = {\url{http://arxiv.org/abs/1703.00536}},
   archivePrefix = {arXiv},
   eprint    = {1703.00536},
   timestamp = {Mon, 13 Aug 2018 16:47:09 +0200},
@@ -73,7 +69,7 @@
   journal   = {CoRR},
   volume    = {abs/1908.04756},
   year      = {2019},
-  url       = {http://arxiv.org/abs/1908.04756},
+  note      = {\url{http://arxiv.org/abs/1908.04756}},
   archivePrefix = {arXiv},
   eprint    = {1908.04756},
   timestamp = {Mon, 19 Aug 2019 13:21:03 +0200},
@@ -86,7 +82,7 @@
   journal   = {},
   volume    = {},
   year      = {2017},
-  url       = {https://plasma.io/plasma.pdf},
+  note      = {\url{https://plasma.io/plasma.pdf}},
   archivePrefix = {},
   eprint    = {},
   timestamp = {},
@@ -101,7 +97,7 @@
   journal   = {},
   volume    = {},
   year      = {2016},
-  url       = {https://lightning.network/lightning-network-paper.pdf},
+  note      = {\url{https://lightning.network/lightning-network-paper.pdf}},
   archivePrefix = {},
   eprint    = {},
   timestamp = {},
@@ -120,7 +116,7 @@
   journal   = {CoRR},
   volume    = {abs/1910.00159},
   year      = {2019},
-  url       = {http://arxiv.org/abs/1910.00159},
+  note      = {\url{http://arxiv.org/abs/1910.00159}},
   archivePrefix = {arXiv},
   eprint    = {1910.00159},
   timestamp = {Fri, 04 Oct 2019 12:28:06 +0200},
@@ -133,7 +129,7 @@
   journal   = {},
   volume    = {},
   year      = {2020},
-  url       = {https://sentinel.co/whitepaper},
+  note      = {\url{https://sentinel.co/whitepaper}},
   archivePrefix = {},
   eprint    = {},
   timestamp = {},
@@ -147,7 +143,7 @@
   journal   = {},
   volume    = {},
   year      = {2017},
-  url       = {https://mysterium.network/whitepaper.pdf},
+  note      = {\url{https://mysterium.network/whitepaper.pdf}},
   archivePrefix = {},
   eprint    = {},
   timestamp = {},
@@ -162,7 +158,7 @@ Steven Waterhouse},
   journal   = {},
   volume    = {},
   year      = {2019},
-  url       = {https://www.orchid.com/assets/whitepaper/whitepaper.pdf},
+  note      = {\url{https://www.orchid.com/assets/whitepaper/whitepaper.pdf}},
   archivePrefix = {},
   eprint    = {},
   timestamp = {},
@@ -180,7 +176,7 @@ Steven Waterhouse},
   volume    = {2013},
   pages     = {322},
   year      = {2013},
-  url       = {http://eprint.iacr.org/2013/322},
+  note      = {\url{http://eprint.iacr.org/2013/322}},
   timestamp = {Mon, 11 May 2020 15:56:43 +0200},
   biburl    = {https://dblp.org/rec/journals/iacr/AumassonNWW13.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
@@ -190,7 +186,7 @@ Steven Waterhouse},
   author    = {Daniel R. L. Brown},
   title     = {SEC 2. Standards for Efficient Cryptography Group: Recommended Elliptic Curve Domain Parameters},
   year      = {Version 2.0, 2010},
-  url       = {https://www.secg.org/sec2-v2.pdf},
+  note      = {\url{https://www.secg.org/sec2-v2.pdf}},
 }
 @inproceedings{tor,
   author    = {Roger Dingledine and
@@ -203,12 +199,18 @@ Steven Waterhouse},
   pages     = {303--320},
   publisher = {{USENIX}},
   year      = {2004},
-  url       = {http://www.usenix.org/publications/library/proceedings/sec04/tech/dingledine.html},
+  note      = {\url{http://www.usenix.org/publications/library/proceedings/sec04/tech/dingledine.html}},
   timestamp = {Mon, 01 Feb 2021 08:43:04 +0100},
   biburl    = {https://dblp.org/rec/conf/uss/DingledineMS04.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 @inproceedings{i2p,
   title     = {I2P: The Invisible Internet Project},
-  url       = {https://geti2p.net/en/about/intro},
+  note      = {\url{https://geti2p.net/en/about/intro}},
+}
+@inproceedings{un2018,
+  author    = {UN. Office of the High Commissioner for Human Rights},
+  title     = {The right to privacy in the digital age: report},
+  year      = {2018},
+  note      = {\url{https://www.ohchr.org/EN/Issues/DigitalAge/Pages/ReportDigitalAge.aspx}},
 }
