--- a/docs/yellowpaper/sections/05-HOPR-incentivization-mechanism/03-proof-of-relay.tex
+++ b/docs/yellowpaper/sections/05-HOPR-incentivization-mechanism/03-proof-of-relay.tex
@@ -57,7 +57,7 @@ By decrypting $\beta_i$, each mix node $n_i$ will retrieve the public key of the
         \end{tabular} &          \\[3em]
         \hline
     \end{tabular}
-    \caption{SPHINX with PoR}
-    \label{fig:SPHINX with PoR}
+    \caption{Sphinx with PoR}
+    \label{fig:Sphinx with PoR}
 \end{figure}
 \end{comment}
