--- a/docs/yellowpaper/sections/06-tickets/index.tex
+++ b/docs/yellowpaper/sections/06-tickets/index.tex
@@ -58,7 +58,7 @@ Tickets are received together with packets which means that the recipient and th
 \\~\\ \textbf{Validate response:} Once $(A)$ receives $s_{i+1}^{(1)}$ from (B) by the secret sharing, it can compute $$r_i=s_i^{(0)}+s_{i+1}^{(1)}$$ where $r_i$ is the response $r$ at iteration $i$ such that it verifies
 $$r_i*G=T_{c_i}$$
 \\\textbf{Validate hint:} Once the recipient transforms the packet, it is able to compute $s_i$. The recipient is now also able to extract the routing information from the packet.
-This includes a hint to the value $s_{i+1}$ given as $$H_i=s_{i+1}^{(1)}*G$$ which is stored in the sphinx packet header.
+This includes a hint to the value $s_{i+1}$ given as $$H_i=s_{i+1}^{(1)}*G$$ which is stored in the Sphinx packet header.
 \\The unacknowledged ticket is stored in the database under the hint to the promised value to make sure that the acknowledgement can be afterwards linked to the unacknowledged ticket.
 \newline Together with $s_i^{(0)}$, the node can verify that $$T_{c_i}=s_i^{(0)}*G+H_i$$ with $$s_i^{(0)}*G+H_i=s_i^{(0)}*G+s_{i+1}^{(1)}*G=(s_i^{(0)}+s_{i+1}^{(1)})*G$$
 This allows the recipient to verify that the promised value $s_{i+1}^{(1)}$ indeed leads to a solution of the challenge given in the ticket.
