--- a/docs/yellowpaper/sections/03-sphinx-packet-format/index.tex
+++ b/docs/yellowpaper/sections/03-sphinx-packet-format/index.tex
@@ -1,6 +1,10 @@
 \section{Sphinx Packet Format}
 
-HOPR uses the SPHINX packet format \cite{sphinxpaper} to encapsulate and route data packets in order to achieve sender and receiver unlinkability. The SPHINX packet format determines how mixnet packet are created and transformed in order to relay them to the next downstream node. Each sphinx packet consists of two parts:
+HOPR uses the Sphinx packet format \cite{sphinxpaper} to encapsulate and route
+data packets in order to achieve sender and receiver unlinkability. The Sphinx
+packet format determines how mixnet packet are created and transformed in order
+to relay them to the next downstream node. Each Sphinx packet consists of two
+parts:
 
 \begin{figure}[H]
     \centering
@@ -24,7 +28,16 @@ HOPR uses the SPHINX packet format \cite{sphinxpaper} to encapsulate and route d
 \end{figure}
 
 \subsection{Construction}
-We will explain in the following all the steps a sphinx packet goes through in order to arrive to its final destination starting from the key derivation in order to extract new shared keys with all the relay nodes to unblinding the routing information using those shared keys in order to find the public key of the next relay node and checking the routing information's integrity before sending it. Each node then deletes that information and replaces it with their own blinding and decrypts one layer of the payload which has several layers of encryption similar to onion routing.
+
+We will explain in the following all the steps a Sphinx packet goes through in
+order to arrive to its final destination starting from the key derivation in
+order to extract new shared keys with all the relay nodes to unblinding the
+routing information using those shared keys in order to find the public key of
+the next relay node and checking the routing information's integrity before
+sending it. Each node then deletes that information and replaces it with their
+own blinding and decrypts one layer of the payload which has several layers of
+encryption similar to onion routing.
+
 \paragraph{Notation:}Let $\kappa=128$ be the security parameter. An adversary will have to do about $2^\kappa$ operations to break the security of Sphinx with non negligible probability.
 Let $r$ be the maximum number of nodes that a Sphinx mix message will traverse before being delivered to its destination.
 \\$G$ is a prime order cyclic group satisfying the Decisional Diffie-Hellman Assumption, we use the secp256k1 elliptic curve \cite{sec2}. The element $g$ is a generator of $G$ and $q$ is the (prime) order of $G$, with $q\approx2^{\kappa}$.
@@ -51,14 +64,15 @@ $h_b:G^*\times G^*\rightarrow\mathbb{Z}^*_q$ where $\mathbb{Z}^*_q$ is the field
 \end{equation}
 for $1\le i < r-1$. 
 \\~\\Where $y_1, y_2,y_3$ and $y_4$ are the public keys of the nodes $B,C, D$ and $Z$  which we assume to be available to $A$ .
+
     \paragraph{Routing information}
     Each node on the path needs to know the next downstream node. Therefore, the sender $(A)$ generates routing information $\beta_i$ for $(B)$, $(C)$ and $(D)$ as well as message $END$ to tell $(Z)$ that it is the final receiver of the message. 
     The END message is a distinguished prefix byte that's added to the final receiver's compressed public key.
     For ECDSA public key compression, the $x$ coordinate would be the only one used and would be prepended by $02$. 
     \\The $y$ coordinate will be extracted from $x$ by resolving the elliptic curve equation $Y^2=X^3+aX+b$, with two given $a$ and $b$ parameters. A square root extraction will yield $Y$ or $-Y$. The compressed point format includes the least significant bit of $Y$ in the first byte (the first byte is $0\times 02$ or $0\times 03$, depending on that bit).
     \\The routing information looks as the following:
-    
-        
+
+
     \begin{align}  
             \beta_{v-1} &=(y_Z\|0_{(2(r-v)+2)\kappa-|Z|}\oplus \rho(h_{\rho}(s_{v-1}))_{[ \,0....(2(r-v)+3)\kappa-1\,]})\|\phi_{v-1}\\
             and &\nonumber \\
@@ -73,7 +87,7 @@ for $0\le i < v-1$
 \end{align}
 where $\phi_0=\epsilon$ is an empty string. $\phi_i$ is generated using the shared secret $s_{i-1}$ and used to ensure the header packets remain constant in size as layers of encryption are added or removed. Upon receiving a packet, the processing node extracts the information destined for it from the route information and the per-hop payload. The extraction is done by deobfuscating and left-shifting the field. This would make the field shorter at each hop, allowing an attacker to deduce the route length. For this reason, the field is pre-padded before forwarding. Since the padding is part of the HMAC, the origin node will have to pre-generate an identical padding (to that which each hop will generate) in order to compute the HMACs correctly for each hop.
     \\~\\$\beta_i$ is computed as the concatenation of $Z$ and a sequence of padding which is then encrypted by XORing with the output of a pseudo-random number generator seeded with shared key $s_{v-1}$ of node $v-1$. The result is finally concatenated with $\phi$ to ensure the header packets remain constant in size.
-    \\In the original sphinx paper, $Z$ is concatenated with an identifier $I$ and $0$ padding sequence where $I$ is used for SURBs (Single-Use-Reply Blocks) such that $I \in \{0, 1\}^\kappa$. We don't use $I$ since we don't currently use SURBs. We also include a $hint$ and $challenge$ values in $\beta$ that are defined in \nameref{ProofOfRelay} section. These values aren't included in the original sphinx paper but will be needed for the HOPR protocol.
+    \\In the original Sphinx paper, $Z$ is concatenated with an identifier $I$ and $0$ padding sequence where $I$ is used for SURBs (Single-Use-Reply Blocks) such that $I \in \{0, 1\}^\kappa$. We don't use $I$ since we don't currently use SURBs. We also include a $hint$ and $challenge$ values in $\beta$ that are defined in \nameref{ProofOfRelay} section. These values aren't included in the original Sphinx paper but will be needed for the HOPR protocol.
     \\~\\Since $(A)$ has a shared secret with each of the nodes along the path, it is able to derive blindings for each of them.
     \newline Each node along the path receives an authentication tag $\gamma_i$ in the form of a message authentication code (MAC)
 which is encoded in the header.
@@ -89,9 +103,9 @@ By using the derived shared secret $s_i$, each node is able to recompute the aut
 \begin{align}  
     \gamma_i&=HMAC(s_i,\beta_i)
     \label{eq:6}
-\end{align} 
-$(B)$ computes the keyed-hash of the encrypted routing information $\beta_0$ as 
- 
+\end{align}
+$(B)$ computes the keyed-hash of the encrypted routing information $\beta_0$ as
+
     $$\gamma_0=HMAC(s_0,\beta_0)$$
 and compares with the integrity tag $\gamma_0$ attached in the packet header. If the integrity check fails because the header has been tampered with, the packet is dropped. Otherwise, the mix-node proceeds to the next step.
 \\This integrity check allows to verify whether or not the header was modified.
@@ -99,7 +113,7 @@ and compares with the integrity tag $\gamma_0$ attached in the packet header. If
 \paragraph{Unblinding}
 The unblinding works as follow:
 \\$(B)$ decrypts the attached $\beta_0$ in order to extract the routing instructions. First, $(B)$ appends a zero-byte padding at the end of $\beta_0$ and decrypts the padded block of routing information $B$ by XORing it with $PRNG(s_{0})$ as follows:
-\begin{align}  
+\begin{align}
     (\beta_0\|0_{2\kappa})&\oplus \rho(h_{\rho}(s_{0}))
 \end{align}
 (B) parses the routing instructions from $(A)$ in order to obtain the address of the next mix-node $(C)$, as well the new integrity tag $\gamma_1$ and $\beta_1$, which should be forwarded to the next hop.
@@ -109,24 +123,24 @@ After that $(B)$ extracts the public key of $(C)$, it deletes the routing inform
     \centering
     \includegraphics[width=6cm,height=6cm,keepaspectratio]{../yellowpaper/images/FigureB.png}
     \caption{The processing of the routing information $\beta$}
-    \label{fig:The processing of the routing information beta }                
+    \label{fig:The processing of the routing information beta}
     \end{figure}
 \hspace{-5mm}The first $\kappa$ bits of $\beta_0$ will be $n_{1}$ itself, the next $\kappa$ bits will be $\gamma_{1}$, and the remaining $(2r-1)\kappa$ bits of $\beta_0$ are shifted left to form the leftmost $(2r-1)\kappa$ bits of $\beta_{1}$; the rightmost $2\kappa$ bits of $\beta_{1}$ are simply a substring of an output of the PRNG function.
-\\The new mix header is now ready to be sent to $(C)$ or as defined node with public key $y_1$:  
+\\The new mix header is now ready to be sent to $(C)$ or as defined node with public key $y_1$:
 $$M_1=(\alpha_1,\beta_1,\gamma_1)$$
 where $\alpha$, $\beta$ and $\gamma$ are defined in equations $\ref{eq:1}$, $\ref{eq:2}$ and $\ref{eq:6}$
 \paragraph{Encrypt \& Decrypt}
 The encrypted payload $\delta$ is where the actual message is hidden and is computed in different layers using a wide block cipher encryption algorithm and is decrypted at each stage of mixing.
-$\delta$ is repeatedly encrypted via keys derived from the Diffie-Hellman key exchange between the packet’s group element $\alpha_i$ and the public key of each node in the path $y_i$. 
- 
+$\delta$ is repeatedly encrypted via keys derived from the Diffie-Hellman key exchange between the packet’s group element $\alpha_i$ and the public key of each node in the path $y_i$.
+
 \subparagraph{Notation}
-Let $j$ be the block size in bits, which will typically be large. Let $H_k$ be a keyed hash function with the key $k$ for the payload, $k$ consists of four independent keys $k_1$, $k_2$,$k_3$ and $k_4$ which $(A)$ derives from the master keys $s_0$, $s_1$, $s_2$ and $s_3$ where $k_1$, $k_3$ will be used to key the stream cipher and $k_2$, $k_4$ to key the hash function. The sphinx uses Lioness wide block cipher scheme for encryption and decryption purposes.
-Let $S_k$ be a pseudo random function (stream cipher) which given the input $m$ will generate an output of arbitrary length. We add an authentication tag $\tau$ to $m$ before encryption and a 0-padding string as follows: 
-\begin{align}  
+Let $j$ be the block size in bits, which will typically be large. Let $H_k$ be a keyed hash function with the key $k$ for the payload, $k$ consists of four independent keys $k_1$, $k_2$,$k_3$ and $k_4$ which $(A)$ derives from the master keys $s_0$, $s_1$, $s_2$ and $s_3$ where $k_1$, $k_3$ will be used to key the stream cipher and $k_2$, $k_4$ to key the hash function. The Sphinx uses Lioness wide block cipher scheme for encryption and decryption purposes.
+Let $S_k$ be a pseudo random function (stream cipher) which given the input $m$ will generate an output of arbitrary length. We add an authentication tag $\tau$ to $m$ before encryption and a 0-padding string as follows:
+\begin{align}
    m &\leftarrow 0_{l} \|\tau\|m
     \end{align}
 where $\tau$ is generated arbitrarily and $|\tau|=4$ is its length ($\tau=``HOPR "$ in ASCII). $l$ is the $0$ padding length where
-$0 <= l <= |m| - 4$. 
+$0 <= l <= |m| - 4$.
 \\$m$ is divided into two blocks left $m_l$ and right $m_r$ whose sizes are $|m_l|=w$ and $|m_r|=j-w$ so we get $m=m_r\|m_l$.
 \subparagraph{Encryption}
 The blocks $m_l$ and $m_r$ are transformed using a 4-round Feistel structure:
@@ -146,17 +160,37 @@ for processing relays. Authentication of packet integrity is done by prepending 
     \label{fig:The processing of a Sphinx message }
 \end{figure}
 \hspace{-5mm}Same happens at $(C)$ and $(D)$: key derivation, unblinding, deleting, shifting, integrity check, decryption and blinding.
+
 \subsection{Implementation choices}
+
 Within HOPR, the following cryptographic primitives were used:
+
 \begin{itemize}
-    \item \textbf{Cyclic group:} The cyclic group used in the HOPR Sphinx implementation is an elliptic curve group on the secp256k1 curve and thus operations will be done on the elliptic curve.
-    \item \textbf{Hash function:} BLAKE2s hash function which is a cryptographic hash function faster than SHA-2 and SHA-3, yet is at least as secure as SHA-3 and produces digests of any size between 1 and 32 bytes.
+    \item \textbf{Cyclic group:} The cyclic group used in the HOPR Sphinx
+        implementation is an elliptic curve group on the secp256k1 curve and
+        thus operations will be done on the elliptic curve.
+
+    \item \textbf{Hash function:} BLAKE2s hash function which is a cryptographic
+        hash function faster than SHA-2 and SHA-3, yet is at least as secure as
+        SHA-3 and produces digests of any size between 1 and 32 bytes.
+
     \item \textbf{MAC:} HMAC based on a hash function BLAKE2s.
-    \item \textbf{Encryption scheme:} LIONESS \cite{lionesspaper} implementation, using BLAKE2s as a hash function and ChaCha20 as a stream cipher.
-    \item \textbf{Padding:} In the original SPHINX paper, a sequence of only 0s is used for padding, this allows the last mix-node in the path to infer information about the length of the path and the last destination, hence breaking one of the security properties promised by Sphinx. In order to prevent this attack, We replace the 0-padding by a randomized padding for the last exit-mix node when $v<r$. This way, the exit node can't identify where the padding starts and thus won't be able to find the path length that preceeds the padding. In the case where $v=r$ there is no need to add padding as the length of the path is the maximum length and thus no additional information is being revealed.
+
+    \item \textbf{Encryption scheme:} LIONESS \cite{lionesspaper}
+        implementation, using BLAKE2s as a hash function and ChaCha20 as a
+        stream cipher.
+
+    \item \textbf{Padding:} In the original Sphinx paper, a sequence of only 0s
+        is used for padding, this allows the last mix-node in the path to infer
+        information about the length of the path and the last destination, hence
+        breaking one of the security properties promised by Sphinx. In order to
+        prevent this attack, We replace the 0-padding by a randomized padding
+        for the last exit-mix node when $v<r$. This way, the exit node can't
+        identify where the padding starts and thus won't be able to find the
+        path length that preceeds the padding. In the case where $v=r$ there is
+        no need to add padding as the length of the path is the maximum length
+        and thus no additional information is being revealed.
+
 \end{itemize}
+
 \subsection{Packet serialization}
-
-
-
-
