--- a/docs/yellowpaper/sections/03-sphinx-packet-format/index.tex
+++ b/docs/yellowpaper/sections/03-sphinx-packet-format/index.tex
@@ -55,7 +55,7 @@ $$\alpha_0=g^x,\varphi_0=y^x_B,b_0=h_b(a_0,\varphi_0)$$
 and
 \begin{equation}
     \begin{cases}
-        \alpha_i=g^{x\Pj_{j=0}^{i=r-2}b_j}\\
+        \alpha_i=g^{x\Pi_{j=0}^{i=r-2}b_j}\\
         \varphi_i=y^{x\Pi_{j=0}^{j=r-2}b_j} \\
         b_i=h_b(a_i,\varphi_i)
     \end{cases}\,.
